constraints/k8scontainerimagelatest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerImageLatest
metadata:
  name: deployment-shoul-not-use-latest-image
spec:
  match:
    kinds:
    - apiGroups:
      - apps
      kinds:
      - Deployment
